<resources>
    <string name="app_name">Noon Pay</string>
    <string name="add_money">Add Money</string>
    <string name="request_money">Request Money</string>
    <string name="scan_qr">Scan QR</string>
    <string name="send_money">Send Money</string>
    <string name="no_internet">No Internet</string>
    <string name="dismiss">Dismiss</string>
    <string name="learn_more">Learn More</string>
    <string name="title_upload_national_id">Upload your National ID</string>
    <string name="upload_now">Upload Now</string>
    <string name="takes_less_than_1_min">Takes less than 1 min</string>
    <string name="description_upload_national_id">Required by regulatory authorities</string>
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="pay_qr">Pay QR</string>
    <string name="offers">Offers</string>
    <string name="my_wallet">My Wallet</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_welcome_msg">Sign in to continue using your wallet</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="msg_sign_up">New to noonPay? <B><font color="black">Sign Up</font></B></string>
    <string name="msg_sign_in">Already have an account? <B><font color="black">Sign In</font></B></string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="enter_password">Enter Password</string>
    <string name="hint_mobile_number">10 digit mobile number</string>
    <string name="signing_in">Signing In...</string>
    <string name="registering">Registering...</string>
    <string name="validating">Validating...</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_terms">By checking this you are greeting to noonPay\'s\n<font color="black">Terms &amp; Condition</font></string>
    <string name="txt_continue">Continue</string>
    <string name="email">Email (Optional)</string>
    <string name="type">Type...</string>
    <string name="verify_your_mobile">Verify your mobile</string>
    <string name="submit_code">Submit Code</string>
    <string name="didnt_receive">Didn\'t receive the code? <B><font color="black">Resend Code</font></B></string>
    <string name="otp_description">We have sent a 4 digit code to your\nphone number <font color="#000000">******%s</font></string>
    <string name="sending">Sending...</string>
    <string name="biometric_title">Authenticate</string>
    <string name="biometric_subtitle">Access your noonPay Wallet</string>
    <string name="offer">Offer</string>
</resources>
