<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_noon_logo"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/action_send"
        android:enabled="true"
        android:icon="@drawable/ic_send"
        android:title="@string/send"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/action_pay_qr"
        android:enabled="true"
        android:icon="@drawable/ic_qr_code"
        android:title="@string/pay_qr"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/action_offers"
        android:enabled="true"
        android:icon="@drawable/ic_offer"
        android:title="@string/offers"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/action_wallet"
        android:enabled="true"
        android:icon="@drawable/ic_wallet"
        android:title="@string/my_wallet"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="4"/>

</menu>