<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/upload_icon"
            android:layout_width="@dimen/size_action_icons"
            android:layout_height="@dimen/size_action_icons"
            android:src="@drawable/ic_upload_id"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/gray"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_description"
            android:textStyle="bold"
            android:text="@string/title_upload_national_id"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/title"
            android:layout_toRightOf="@+id/upload_icon"
            android:layout_marginBottom="1dp"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_description"
            android:text="@string/description_upload_national_id"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/description"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/upload_icon"
            android:layout_marginBottom="1dp"/>
        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_description"
            android:text="@string/takes_less_than_1_min"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/blue"
            android:layout_below="@+id/description"
            android:layout_toRightOf="@+id/upload_icon"/>
        <TextView
            android:id="@+id/upload_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_description"
            android:text="@string/upload_now"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_below="@+id/description"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>
        <ImageView
            android:id="@+id/next_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_next"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"/>

    </RelativeLayout>
</layout>