<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <ImageView
                android:layout_width="@dimen/size_action_icons"
                android:layout_height="@dimen/size_action_icons"
                android:src="@drawable/ic_noon_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/welcome_back"
                android:textColor="@color/title"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_description"
                android:text="@string/login_welcome_msg"
                android:textColor="@color/gray_80"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"
            android:text="@string/phone_number"
            android:textColor="@color/gray_80"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:layout_below="@+id/toolbar"/>
        <com.github.diwakar1988.noon.common.PhoneNumberView
            android:id="@+id/phone_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/tv_number"/>
        <View
            android:id="@+id/number_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/vertical_divider"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/phone_number_view"/>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"
            android:text="@string/password"
            android:textColor="@color/gray_80"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:layout_below="@+id/number_divider"/>

        <com.github.diwakar1988.noon.common.PasswordView
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/tv_password"/>
        <View
            android:id="@+id/password_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/vertical_divider"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/password_view"/>
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"
            android:text="@string/forgot_password"
            android:textColor="@color/gray_80"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/password_divider"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"/>
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_bg"
            android:text="@string/signin"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_button"
            android:layout_margin="16dp"
            android:enabled="false"
            android:layout_above="@+id/tv_signup"/>
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"
            android:text="@string/msg_sign_up"
            android:textColor="@color/gray_80"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>
</layout>