<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetStart="0dp">

                <RelativeLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:src="@drawable/ic_arrow_back" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/verify_your_mobile"
                        android:textColor="@color/title"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/otp_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="24dp"
            android:text="@string/otp_description"
            android:textColor="@color/gray_80"
            android:textSize="@dimen/text_size_small_title"
            android:textAlignment="center"/>

        <com.github.diwakar1988.noon.common.PinEntryEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/noon"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="36dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/resend_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="24dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/didnt_receive"
            android:textColor="@color/gray_80"
            android:textSize="@dimen/text_size_small_title"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="16dp"
            android:background="@drawable/btn_bg"
            android:enabled="true"
            android:text="@string/submit_code"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold" />

    </LinearLayout>
</layout>